--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="btn-container">
             <button
                 class="btn btn-color-2"
-                onclick="window.open('./assets/resume_Peter_Ozo-ogueji.pdf')"
+                onclick="window.open('./assets/file:///C:/Users/auuser/Desktop/Resume/PeterOzo_Resume/PeterOzo_Resume.pdf')"
             >
                 Download CV
             </button>
