--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="btn-container">
             <button
                 class="btn btn-color-2"
-                onclick="window.open('./assets/Resume_Peter_Ozo-ogueji')"
+                onclick="window.open('./assets/Peter-Ozo_resume.pdf')"
             >
                 Download CV
             </button>
