--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
             alt="email icon" 
             class="icon contact-icon"
             />
-            <p><a href="mailto:exampleemail@gmail.com">Example@gmail.com</a>
+            <p><a href="mailto:peterchika3254@gmail.com">peterchika3254@gmail.com</a>
             </p>
         </div>
         <div class="contact-info-container">
